Fixed bug #23225 (money_format() didn't handle erroneous return of strfmon)

# Initial patch proposed by marcot@tabini.ca