ext/standard/string.c
@@ -18,7 +18,7 @@
    +----------------------------------------------------------------------+
  */
 
-/* $Id: string.c,v 1.374 2003/04/13 22:59:19 pollita Exp $ */
+/* $Id: string.c,v 1.375 2003/04/16 01:07:03 iliaa Exp $ */
 
 /* Synced with php 3.0 revision 1.193 1999-06-16 [ssb] */
 
@@ -4372,7 +4372,10 @@ PHP_FUNCTION(money_format)
 
 	str_len = format_len + 1024;
 	str = emalloc(str_len);
-	str_len = strfmon(str, str_len, format, value); 	
+	if ((str_len = strfmon(str, str_len, format, value)) < 0) {
+		efree(str);
+		RETURN_FALSE;
+	}
 	str[str_len] = 0;
 
 	RETURN_STRINGL(erealloc(str, str_len + 1), str_len, 0);
